# oclp

./: CMakeLists.txt  Makefile.am  README  TODO  configure.ac  oclp.pc.in
cmake/Modules/: FindGLCP.cmake  FindGLP.cmake  FindOGLP.cmake  FindOpenCL.cmake
include/: commandqueue.h  common.h  config.h  context.h  exception.h  kernel.h  memory.h  program.h
src/: CMakeLists.txt  Makefile.am  commandqueue.cpp  context.cpp  exception.cpp  kernel.cpp  memory.cpp  program.cpp
src/include/: clp.h  commandqueue.h  common.h  context.h  exception.h  kernel.h  memory.h  oclp.h  program.h
